<resources>
    <string name="app_name">Todo2</string>
    <string name="text_todo_list">Todo List</string>
    <string name="text_edit_title">Edit Title</string>
    <string name="text_edit_description">Edit Description</string>
    <string name="text_edit">Edit</string>
    <string name="text_edit_task">Edit Task</string>
    <string name="text_add_description">Add Description</string>
    <string name="text_add">Add</string>
    <string name="text_add_title">Add Title</string>
    <string name="text_add_task">Add Task</string>
    <string name="text_navigate_to_next">Navigate to Next</string>
    <string name="text_title">Title</string>
    <string name="text_description">Description</string>
    <string name="text_edit_edit">Edit</string>
    <string name="text_delete">Delete</string>
    <string name="text_search">Search Here...</string>

</resources>