<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="12dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/lappbar"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/ivBackButton"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_add_task"
            android:textColor="@color/black"
            android:id="@+id/tv_add_task"
            />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:text="@string/text_add_title"
        android:textColor="@color/black"
        android:id="@+id/tv_add_title"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="20dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:id="@+id/et_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:text="@string/text_add_description"
        android:textColor="@color/black"
        android:id="@+id/tv_add_description"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="20dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:id="@+id/et_description"
        />


        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="12dp"
            android:text="@string/text_add"
            android:textColor="@color/black"
            android:layout_marginTop="200dp"
            android:id="@+id/btn_add"
            />




</LinearLayout>