<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

<!--  STEP 2 - this will show how the item will look like -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/text_title"
                android:textColor="@color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="24dp"
                android:text="@string/text_description"
                android:textColor="@color/black"
                android:textSize="14sp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="9dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:background="@color/cream"


                android:text="@string/text_edit_edit"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:layout_marginEnd="10dp"
                />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:background="@color/cream"
                android:padding="5dp"
                android:text="@string/text_delete"
                android:textColor="@color/black"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>